--- a/kubernetes/aws-secret.yaml
+++ b/kubernetes/aws-secret.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-secret # Name of the secret
+  name: aws-secret # Name of the secret
   namespace: default # Namespace of the secret
 data:
-  userData: "encoded-cloud-config" # AWS cloud config file (base64 encoded)
-  providerAccessKeyId: "pqrstu67890" # AWS access key id (base64 encoded)
-  providerSecretAccessKey: "abcdef123456" # AWS secret access key (base64 encoded)
+  userData: "PUT_CLUSTER_USER_DATA_HERE" # b64 encoded
+  providerAccessKeyId: "AWS_ACCESS_KEY_HERE" # AWS access key id (base64 encoded)
+  providerSecretAccessKey: "AWS_SECRET_ACCESS_KEY_HERE" # AWS secret access key (base64 encoded)
 type: Opaque
